# git-newsletter

./: .env.example  .gitignore  README.md  build_email.py  generate_examples.py  pyproject.toml  send_email.py
.devcontainer/: Dockerfile  devcontainer.json
.github/agents/: FLOW.md  commit-analyst.agent.md  newsletter-editor.agent.md  newsletter-writer.agent.md  web-researcher.agent.md
.github/copilot/agents/: commit-journalist.md  commit-journalist.yaml  git-researcher.md  git-researcher.yaml  newsletter-editor.md  newsletter-editor.yaml  web-researcher.md  web-researcher.yaml
.github/prompts/: newsletter-deno-weekly.prompt.md  newsletter-fastapi-monthly.prompt.md  newsletter-flask-monthly.prompt.md  newsletter-github-cli-weekly.prompt.md  newsletter-kubernetes-weekly.prompt.md  newsletter-nextjs-weekly.prompt.md  newsletter-postgresql-monthly.prompt.md  newsletter-python-monthly.prompt.md  newsletter-react-weekly.prompt.md  newsletter-terraform-weekly.prompt.md  newsletter-vite-weekly.prompt.md  newsletter-vscode-weekly.prompt.md
.github/prompts/profiles/: TEMPLATE.prompt.md
.github/skills/commit-analysis/: SKILL.md  git_skills.py
.github/skills/git-research/: SKILL.md
.github/skills/newsletter-writing/: SKILL.md
.github/skills/web-research/: SKILL.md  web_skills.py
.github/workflows/: deploy-pages.yml
assets/email/styles/: 01-clean-blue.css  02-dark-mode.css  03-corporate-green.css  04-warm-sunset.css  05-terminal-hacker.css  06-elegant-serif.css  07-purple-gradient.css  08-ocean-breeze.css  09-retro-pop.css  10-minimalist-rose.css  11-newsprint-ledger.css  12-executive-brief.css
assets/email/templates/: index.html.j2
docs/: agent-flow-improvements-plan.md
examples/: ready_to_send.html
examples/styles/: 01-clean-blue.css  03-corporate-green.css  06-elegant-serif.css  07-purple-gradient.css  09-retro-pop.css
newsletter/: __init__.py  __main__.py  cli.py  models.py  orchestrator.py  session_db.py
newsletter/agents/: __init__.py  prompts.py
newsletter/skills/: __init__.py  git_skills.py  web_skills.py
newsletter/sources/: __init__.py  base.py  git_source.py
samples/email/: example_input.md  vscode-weekly-newsletter-2026-03-10.md
(+13 files in other folders)
