# This file exists for development convenience (uv sync, IDE tooling, etc.).
# The standalone scripts (build_email.py, send_email.py, generate_examples.py)
# declare their own dependencies via PEP 723 inline metadata and can be run
# directly with `uv run <script>` without activating a venv.
[project]
name = "markdown-mailer"
version = "0.2.0"
description = "Markdown to email HTML converter, sender, and AI-powered git newsletter editor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.4",
    "markdown>=3.5.2",
    "css-inline>=0.20.0",
    "python-dotenv>=1.0.1",
    "gitpython>=3.1.40",
]
