# Shared project metadata for `uv sync` and `pip install -e .`.
# The standalone scripts also declare PEP 723 metadata, and this dependency set
# intentionally mirrors that script-level metadata plus repo tooling needs.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-mailer"
version = "0.2.0"
description = "Markdown to email HTML converter, sender, and AI-powered git newsletter editor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.4",
    "markdown>=3.5.2",
    "css-inline>=0.20.0",
    "python-dotenv>=1.0.1",
    "gitpython>=3.1.40",
]

[tool.setuptools]
py-modules = ["build_email", "generate_examples", "send_email"]
